fix cannot find symbol error