@@ -124,7 +124,7 @@ public class JsonSchemaTest {
         reservedFieldMetadata,
         null,
         null);
-    assertEquals(Set.of("name", "city"), parsedSchema.getReservedFields());
+    assertEquals(ImmutableSet.of("name", "city"), parsedSchema.getReservedFields());
   }
 
   @Test
